# bazel-cpp-toolchain

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE
toolchain/: BUILD.bazel
toolchain/clang/: clang_hyper_features.bzl  clang_posix_toolchain_config_base.bzl  clang_toolchain_actions.bzl  hermetic_default_defines.h
toolchain/clang/darwin/: clang_darwin_toolchain_config.bzl  platform_constants.bzl
toolchain/clang/darwin/wrapper-scripts/: cc-wrapper.sh
toolchain/clang/linux/: clang_linux_toolchain_config.bzl  wrapper_llvm_dwp.sh  wrapper_profdata.sh
toolchain/clang/windows/: BUILD.bazel  cc_toolchain_config.bzl  hyper.natvis  long_paths.manifest  manifest_resource.rc
toolchain/helper/: BUILD.bazel  condition_helpers.bzl  context_helpers.bzl  file_helpers.bzl  foreign_build_rpath_fixer_helper.bzl  function_helpers.bzl  label_helpers.bzl  list_helpers.bzl  platform_helpers.bzl  runfiles_helpers.bzl
toolchain/helper/tests/: condition_helpers_tests.bzl  file_helpers_tests.bzl  function_helpers_tests.bzl  label_helpers_tests.bzl  list_helpers_tests.bzl  runfiles_helpers_test.bzl
toolchain/rules/: BUILD.bazel  dsym.bzl  exported_symbols.bzl  generatesymbolfile.py  hyper_cc.bzl  universal_binary.bzl
toolchain/rules/sysroot/: centos_sysroot.BUILD  centos_sysroot.bzl  extract_rpm_file_and_fix_symlinks.py
toolchain/settings/: BUILD.bazel
toolchain/tests/app_with_transitive_deps/: BUILD.bazel  main.cpp
toolchain/tests/application_with_library/: BUILD.bazel  main.cpp
toolchain/tests/cpp_version_check/: BUILD.bazel  main.cpp
toolchain/tests/library_depending_on_other_library/: BUILD.bazel  hello_world.cpp  hello_world.hpp
toolchain/tests/sanitizers/: BUILD.bazel  sanitizer_test.bzl  sanitizer_test.py
toolchain/tests/sanitizers/address/: BUILD.bazel  intentional_overflow.cpp
toolchain/tests/sanitizers/fuzzer/: BUILD.bazel  basic_fuzzer.cpp
toolchain/tests/sanitizers/memory/: BUILD.bazel  intentional_uninitialized_usage.cpp
toolchain/tests/sanitizers/thread/: BUILD.bazel  intentional_data_race.cpp
toolchain/tests/simple_application/: BUILD.bazel  main.cpp
toolchain/tests/simple_gtest/: BUILD.bazel  simple_gtest_main.cpp  simple_gtest_tests.cpp
toolchain/tests/simple_library/: BUILD.bazel  lib.cpp  lib.h
